<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:title="@string/manuActivityMain"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:id="@+id/abViewMain">
    </item>

    <item
        android:title="@string/menuAdd"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:id="@+id/abViewAddGift">
    </item>

    <item
        android:title="@string/menuAbout"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"
        android:id="@+id/abViewbout">
    </item>

    <item
        android:id="@+id/exit"
        android:title="@string/menuExit"
        app:showAsAction="never">
    </item>

</menu>