<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="34sp"
        android:textColor="@color/tvTitle"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:id="@+id/tvTitle">
    </TextView>

    <android.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnView"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/btnMainTextColor"
        android:background="@drawable/button_main_view"
        android:width="330sp"
        android:layout_marginTop="50sp"
        android:layout_gravity="center"
        android:id="@+id/btnView">
    </android.widget.Button>

    <android.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/btnMainTextColor"
        android:background="@drawable/button_main_add"
        android:width="330sp"
        android:layout_marginTop="30sp"
        android:layout_gravity="center"
        android:id="@+id/btnAdd">
    </android.widget.Button>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/christmas_gifts_1"
        android:layout_marginTop="50sp">
    </ImageView>

</LinearLayout>